Fix grey border around Chrome OS system tray bubble

The BubbleBorder shadow setting NO_SHADOW was identical to BIG_SHADOW
until https://chromium-review.googlesource.com/c/chromium/src/+/1195342.
That CL attempted to update all existing uses of NO_SHADOW to BIG_SHADOW
to avoid changing existing behaviour but it missed the usage in
TrayBubbleView.

This CL updates NO_SHADOW to BIG_SHADOW to revert an unintended change in
behaviour.

Current: https://bugs.chromium.org/p/chromium/issues/attachment?aid=359605&signed_aid=gEEyLLd-AdZImC9nKec-5A==&inline=1
After reverting https://chromium-review.googlesource.com/c/chromium/src/+/1195342: https://bugs.chromium.org/p/chromium/issues/attachment?aid=359606&signed_aid=iw3ONXWvygIGZHFz4GBIoQ==&inline=1
After this CL: https://bugs.chromium.org/p/chromium/issues/attachment?aid=359607&signed_aid=_oDSWBycRhw3Vs3_Tgp0Qg==&inline=1

Bug: 884653
Change-Id: Idd33394fbf92b7711705fd081889d0d964c5ba37
Reviewed-on: https://chromium-review.googlesource.com/1240216
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593765}
Former-commit-id: 8a4e530f4fe04c07b6dc6efa52cf273d735abe6f